--- a/Taylr/Base.lproj/Main.storyboard
+++ b/Taylr/Base.lproj/Main.storyboard
@@ -85,6 +85,7 @@
                         <segue destination="lnc-Fm-oTi" kind="relationship" relationship="viewControllers" id="doz-Fa-bbU"/>
                         <segue destination="5Q6-Kt-6sh" kind="relationship" relationship="viewControllers" id="siY-pH-qKt"/>
                         <segue destination="GSL-sK-91w" kind="relationship" relationship="viewControllers" id="UNI-B6-dNU"/>
+                        <segue destination="it8-ve-Pp7" kind="relationship" relationship="viewControllers" id="C9S-hA-49T"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JRV-fZ-84H" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -115,7 +116,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TodayCell" id="5p8-O9-cl0" userLabel="TodayCell" customClass="TodayCell" customModule="Taylr" customModuleProvider="target">
-                                        <rect key="frame" x="123" y="10" width="355" height="532"/>
+                                        <rect key="frame" x="122.5" y="10" width="355" height="532"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="355" height="532"/>
@@ -397,7 +398,7 @@
                                 <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ContactConnectionCell" rowHeight="76" id="pVQ-Tu-jcV" customClass="ContactConnectionCell" customModule="Taylr" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="600" height="76"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="600" height="76"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pVQ-Tu-jcV" id="4hE-7L-rNx">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="76"/>
@@ -463,7 +464,7 @@
                             <constraint firstAttribute="bottom" secondItem="4cg-hq-bZ8" secondAttribute="bottom" id="rRe-Qf-n7c"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="ic-chats" id="UYe-je-j1k">
+                    <tabBarItem key="tabBarItem" title="" image="ic-video" id="UYe-je-j1k">
                         <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                     </tabBarItem>
                     <navigationItem key="navigationItem" title="Connections" id="3Yx-31-1g1"/>
@@ -475,6 +476,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NWp-vJ-jcK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1030" y="2032"/>
+        </scene>
+        <!--Conversation List View Controller-->
+        <scene sceneID="tpj-Zk-eLW">
+            <objects>
+                <tableViewController id="it8-ve-Pp7" customClass="ConversationListViewController" customModule="Taylr" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="gXD-1s-gGA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="YZG-rP-d88">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YZG-rP-d88" id="eiH-gh-qYv">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="it8-ve-Pp7" id="E0B-da-cAm"/>
+                            <outlet property="delegate" destination="it8-ve-Pp7" id="ncW-3j-Ay3"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="" image="ic-chats" id="L1B-H5-t0D">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F1g-Nu-HhR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1769" y="1957"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="eI4-oC-eOR">
@@ -2743,7 +2775,7 @@
         <image name="sample-photo" width="1242" height="660"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="33G-iq-iGB"/>
+        <segue reference="Hrk-zE-6Yh"/>
         <segue reference="AOm-r3-fj8"/>
     </inferredMetricsTieBreakers>
 </document>
